--- a/css/styles.css
+++ b/css/styles.css
@@ -146,22 +146,27 @@ header {
 
 .link-header {
     display: flex;
-    justify-content: baseline;
+    justify-content: center;
     align-items: center;
     margin-left: 340px;
 
 }
 .icon-envelope {
     display: block;
+    align-self: center;
     width: 16px;
     height: 12px; 
     margin-right: 10px;
+    color: var(--secondary-text-color);
+    
 }
 .icon-smartphone {
     display: block;
     width: 10px;
     height: 16px;
     margin-right: 10px;
+    color: var(--secondary-text-color);
+    
 }
 
 .link-header-mail {
@@ -213,11 +218,11 @@ header {
 /* HERO */
 
 .hero {
-    max-width: 1600;
+    max-width: 1600px;
     height: 600px;
     padding-top: 200px;
-    margin-left: 0 auto;
-    margin-right: 0 auto;
+    margin: 0 auto;
+    background: #C4C4C4;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
     url("../images/hero.jpg");
@@ -533,7 +538,8 @@ footer {
     padding-bottom: 60px;
 
 }
-.container-foot {
+.container.foot {
+    display: flex;
     align-items: baseline;
 }
 
@@ -671,9 +677,7 @@ address {
     border-color: transparent;
     color: var(--secondary-color);
     background: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-        0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
+    
     border-radius: 4px;
 }
 
@@ -682,6 +686,7 @@ address {
     color: var(--primary-text-color);
     background: #F5F4FA;
     border-color: transparent;
+    
     border-radius: 4px;
 }
 
@@ -692,7 +697,8 @@ address {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
-
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 }
 
@@ -747,6 +753,11 @@ address {
     height: 404px;
     background: var(--secondary-color);
 
+}
+.cont:hover,
+.cont:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .mark {
